force-app/main/default/objects/ExpeditionCenter__c/ExpeditionCenter__c.object-meta.xml
<CustomObject>
    <label>Local de Expedição</label>
    <nameField>
        <label>Nome de Local de Expedição</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locais de Expedição</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>