force-app/main/default/objects/ExpeditionCenter__c/fields/CustomIdTxt__c.field-meta.xml
<CustomField>
    <fullName>CustomIdTxt__c</fullName>
    <externalId>true</externalId>
    <label>Código do Local</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>