force-app/main/default/objects/ExpeditionCenter__c/fields/MeasureTypeTxt__c.field-meta.xml
<CustomField>
    <fullName>MeasureTypeTxt__c</fullName>
    <label>Tipo de Medição</label>
    <length>1</length>
    <type>Text</type>
</CustomField>