force-app/main/default/objects/ExpeditionCenter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CenterCodeTxt__c</columns>
    <columns>CustomIdTxt__c</columns>
    <columns>MeasureTypeTxt__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>